# ODC_Sap_PyAutoGUI

./: .gitignore  README.md  pyproject.toml
src/: ler_excel.py  sap_auto.py
